# RPC

./: .gitignore  CMakeLists.txt  README.md  TODO.md  client.c  crc.c  crc.h  rpc.h  rpc_client.c  rpc_client.h  rpc_client_main.c  rpc_idl.json  rpc_server_helpers.h  rpc_server_main.c  server.c
client/: conn_pool.c  conn_pool.h  epoll_api.c  epoll_api.h  pending.c  pending.h  rpc_async.c  rpc_async.h  rpc_async_new.c  rpc_async_new.h  rpc_client.c  rpc_client.h  rpc_client_main.c  rpc_client_manual.c  rpc_client_manual.h  rpc_codec.c  rpc_codec.h  rpc_future.h  rpc_types.h
server/: rpc_server_helpers.c  rpc_server_impl.c  rpc_server_main.c
tools/: gen_rpc_client.py  gen_rpc_client_api.py  gen_rpc_client_stub.py  gen_rpc_func_h.py  gen_rpc_server.py  gen_rpc_server_skeleton.py
